@@ -195,6 +195,9 @@
       <email>alban.peignier at free.fr</email>
     </contributor>
     <contributor>
+      <name>Niall Pemberton</name>
+    </contributor>
+    <contributor>
       <name>Ian Springer</name>
     </contributor>
     <contributor>
